--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==1.8.4
+Django==1.9.1
+django-pyodbc-azure==1.9.1.0
 django-widget-tweaks==1.4.1
 Markdown==2.6.3
 Pillow==3.1.0
+pyodbc==3.0.10
 wheel==0.24.0
