--- a/web.config
+++ b/web.config
@@ -22,7 +22,7 @@
                     <conditions>
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="handler.fcgi/{R:1}" appendQueryString="false" />
+                    <action type="Rewrite" url="handler.fcgi/{R:1}" appendQueryString="true" />
                 </rule>
             </rules>
         </rewrite>
