Small change in web.config

--- a/web.config
+++ b/web.config
@@ -2,7 +2,7 @@
 <configuration>
     <appSettings>
         <add key="pythonpath" value="D:\home\site\wwwroot\gallery;D:\home\site\wwwroot\site-packages" />
-        <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+        <add key="WSGI_HANDLER" value="django.core.handlers.wsgi.WSGIHandler()" />
         <add key="DJANGO_SETTINGS_MODULE" value="gallery.settings" />   
     </appSettings>
     <system.webServer>
